--- a/project.html
+++ b/project.html
@@ -39,7 +39,6 @@
             </div>
         </nav>
     </div>
-
     <div class="container-xl clearfix px-3 mt-4">
         <div class="card-content col-4 float-left pr-6", style="width:300px">
             <a>
@@ -58,8 +57,7 @@
         </div>
         <div class="col-12 col-md-8 float-left pl-2">
             <div class="box">
-                <h1>Projects Summary</h1>
-                
+                <h1>Independent Projects</h1>
                 <h2>In-Store Shopping Application</h2>
                 <h2>Created by <a href="https://www.linkedin.com/in/qiqiong-y-431971185/">Michelle Yu</a> & Norman Lo</h2>
                 <h4>Summary</h4>
@@ -124,13 +122,9 @@
                 <h4>Summary</h4>
                 <p>""</p>
                 <a href="">Project Link (Not Availalbe Yet)</a> -->
-
             </div>
         </div>
     </div>
-
-
-
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
