--- a/work.html
+++ b/work.html
@@ -61,7 +61,7 @@
             <div class="box">
                 <h1>Work Experience</h1>
                 <h3>Data Scientist / Analyst @ <a href="http://www.codewithcorgis.com" target="_blank">Code with Corgis</a></h3>
-                <p>Experience in research design, data management, data mining, machine learning, statistical modeling, and data visualization.
+                <p>Experience in research design, data management, data mining, machine learning, statistical modeling, and BI dashboards.
                     <ul><strong>Work Description:</strong>
                         <li>Support product and leadership teams with insights gained from analyzing company data</li>
                         <li>Utilizing statistical and machine learning models to drive optimization and improvement of product development and business strategies</li>
@@ -74,7 +74,7 @@
                 </p>
                 <h3>Adjunct Instructor</h3>
                 <p>Experience in teaching Economics and Statistics at college level. Institutions covered San Francisco State University (SFSU), Diablo Valley College (DVC), University of San Francisco (USF), 
-                    City College of San Francisco, and Metropolitan State University (MSU, online courses). Guide and develop graduate students’ ability to create successful research project.
+                    City College of San Francisco, St. Mary's College, and Metropolitan State University (MSU, online courses). Guide and develop graduate students’ ability to create successful research project.
                     <ul><strong>Courses:</strong>
                         <li>Principles of Microeconomics</li>
                         <li>Principles of Macroeconomics</li>
@@ -83,6 +83,7 @@
                         <li>Mathematical Economics</li>
                         <li>Health Economics</li>
                         <li>Data Mining with Buisness Application</li>
+                        <li>Busienss Statistics</li>
                     </ul>
                 </p>
                 <h3>Equity Program Advisor</h3>
@@ -118,12 +119,12 @@
                 [ 'Work',   'Hallmark Cards',                    new Date(2006, 2, 10), new Date(2008, 2, 30) ],
                 [ 'Work',   'First Global',                      new Date(2008, 3, 01), new Date(2009, 10, 30) ],
                 [ 'Work',   'EPIK',                              new Date(2010, 1, 20), new Date(2013, 1, 20) ],
-                [ 'Work',   'SFSU, DVC, USF, CCSF, MSU',         new Date(2015, 8, 25), new Date(2020, 6, 01) ],
-                [ 'Work',   'Code with Corgis',                  new Date(2019, 2, 01), new Date(2020, 6, 01) ],
+                [ 'Work',   'SFSU, DVC, USF, CCSF, MSU',         new Date(2015, 8, 25), new Date(2020, 12, 01) ],
+                [ 'Work',   'Code with Corgis',                  new Date(2019, 2, 01), new Date(2020, 12, 01) ],
                 [ 'Country',   'U.S.A.',                         new Date(2000, 8, 25), new Date(2005, 10, 01) ],
-                [ 'Country',   'Hong Kong',                      new Date(2005, 10, 03), new Date(2009, 10, 30) ],
+                [ 'Country',   'Hong Kong',                      new Date(2005, 10, 03), new Date(2010, 1, 18) ],
                 [ 'Country',   'South Korea',                    new Date(2010, 1, 20), new Date(2013, 1, 20) ],
-                [ 'Country',   'U.S.A.',                         new Date(2013, 1, 22), new Date(2020, 6, 01) ]]);
+                [ 'Country',   'U.S.A.',                         new Date(2013, 1, 22), new Date(2020, 12, 01) ]]);
             var options = {
                 timeline: { colorByRowLabel: true }
             };
