--- a/teach.html
+++ b/teach.html
@@ -86,6 +86,12 @@
                     <li><a href="http://www.ccsf.edu/en/educational-programs/ccsf-catalog/courses-by-department/econ-courses.html">ECON5: Intro. to Statistics for Economics, Business, and Social Science</a></li>
                 </ul>
                 
+                <h2>St. Mary's College (SMC)</h2>
+                <h4>Year: 2020 - 2021</h4>
+                <ul><strong>Classes:</strong>
+                    <li ><a href="https://www.stmarys-ca.edu/business-administration/course-descriptions">BUSAD40: Business Statistics</a></li>
+                </ul>
+
                 <h2>Metropolitan State University (MSU)</h2>
                 <h4>Year: 2017 - Present</h4>
                 <ul><strong>Classes:</strong>
@@ -123,18 +129,18 @@
                 dataTable.addColumn({ type: 'date', id: 'End' });
                 dataTable.addRows([
                 [ 'Education', 'B.A. in Economics',              new Date(2000, 8, 25),  new Date(2004, 5, 28) ],
-                [ 'Education', 'M.A. in Economics',              new Date(2013, 8, 25),  new Date(2015, 5, 28) ],
+                [ 'Education', 'M.S. in Quantitative Economics', new Date(2013, 8, 25),  new Date(2015, 5, 28) ],
                 [ 'Education', 'U.C. Berkeley Extension',        new Date(2019, 1, 21),  new Date(2019, 8, 23) ],
                 [ 'Work',   'Apex',                              new Date(2004, 10, 1), new Date(2005, 10, 01) ],
                 [ 'Work',   'Hallmark Cards',                    new Date(2006, 2, 10), new Date(2008, 2, 30) ],
                 [ 'Work',   'First Global',                      new Date(2008, 3, 1), new Date(2009, 10, 30) ],
                 [ 'Work',   'EPIK',                              new Date(2010, 1, 20), new Date(2013, 1, 20) ],
-                [ 'Work',   'SFSU, DVC, USF, CCSF, MSU',         new Date(2015, 8, 25), new Date(2020, 6, 01) ],
-                [ 'Work',   'Code with Corgis',                  new Date(2019, 2, 01), new Date(2020, 6, 01) ],
+                [ 'Work',   'SFSU, DVC, USF, CCSF, MSU',         new Date(2015, 8, 25), new Date(2020, 12, 01) ],
+                [ 'Work',   'Code with Corgis',                  new Date(2019, 2, 01), new Date(2020, 12, 01) ],
                 [ 'Country',   'U.S.A.',                         new Date(2000, 8, 25), new Date(2005, 10, 01) ],
-                [ 'Country',   'Hong Kong',                      new Date(2005, 10, 3), new Date(2009, 10, 30) ],
+                [ 'Country',   'Hong Kong',                      new Date(2005, 10, 3), new Date(2010, 1, 18) ],
                 [ 'Country',   'South Korea',                    new Date(2010, 1, 20), new Date(2013, 1, 20) ],
-                [ 'Country',   'U.S.A.',                         new Date(2013, 1, 22), new Date(2020, 6, 01) ]]);
+                [ 'Country',   'U.S.A.',                         new Date(2013, 1, 22), new Date(2020, 12, 01) ]]);
             var options = {
                 timeline: { colorByRowLabel: true }
             };
