--- a/index.html
+++ b/index.html
@@ -36,10 +36,9 @@
                         Sample Data
                         </a>
                         <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                            <a class="dropdown-item" href="SurveyData.html">School Survey Data</a>
-                            <a class="dropdown-item" href="">data 2</a>
-                            <a class="dropdown-item" href="">data 3</a>
-                            <a class="dropdown-item" href="">data 4</a>
+                            <a class="dropdown-item" href="FoodData.html">Food Environment Sample Data</a>
+                            <a class="dropdown-item" href="StudentData.html">Economics Course Sample Data</a>
+                            <a class="dropdown-item" href="WorldHappiness.html">World Happiness Sample Data</a>
                         </div>
                     </li>
                     <li class="nav-item">
