--- a/teach.html
+++ b/teach.html
@@ -76,6 +76,7 @@
                     <li><a href="https://catalog.usfca.edu/preview_course_nopop.php?catoid=2&coid=4670">ECON120: Economics Methods</a></li>
                     <li><a href="https://www.usfca.edu/arts-sciences/graduate-programs/international-development-economics/program-details/summer-start">ECON190: Principles of Economics</a></li>
                     <li><a href="https://www.usfca.edu/arts-sciences/graduate-programs/international-development-economics/program-details/summer-start">ECON191: Mathematical Economics</a></li>
+                    <li><a href="https://catalog.usfca.edu/preview_course_nopop.php?catoid=22&coid=185728">APS606: Quantitative Research Methods</a></li>
                 </ul>
                 
                 <h2>City College of San Francisco (CCSF)</h2>
