--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             </a>
             <h3>Norman Lo</h3>
             <h5>Economist / Data Scientist</h5>
-            <h5>Adjunct College Instructor</h5>
+            <h5>Adjunct Professor</h5>
             <h5>
                 <svg class="octicon octicon-location" viewBox="0 0 12 16" version="1.1" width="12" height="16" aria-hidden="true">
                     <path fill-rule="evenodd" d="M6 0C2.69 0 0 2.5 0 5.5 0 10.02 6 16 6 16s6-5.98 6-10.5C12 2.5 9.31 0 6 0zm0 14.55C4.14 12.52 1 8.44 1 5.5 1 3.02 3.25 1 6 1c1.34 0 2.61.48 3.56 1.36.92.86 1.44 1.97 1.44 3.14 0 2.94-3.14 7.02-5 9.05zM8 5.5c0 1.11-.89 2-2 2-1.11 0-2-.89-2-2 0-1.11.89-2 2-2 1.11 0 2 .89 2 2z"></path>
@@ -96,13 +96,13 @@
                     <dd class="col-sm-8">R, Python, Javascript, SQL, noSQL, Stata, E-View, MatLab, HTML, and CSS</dd>
 
                     <dt class="col-sm-4">Data Manipulation & Visualization:</dt>
-                    <dd class="col-sm-8">pandas, matplolib, seaborn, Tableau, Plotly, and D3</dd>
+                    <dd class="col-sm-8">Tidyverse, Pandas, MatPlotLib, Seaborn, Tableau, Plotly, and D3</dd>
                     
-                    <dt class="col-sm-4">Data Base:</dt>
-                    <dd class="col-sm-8">mySQL, postgeSQL, mongoDB</dd>
+                    <dt class="col-sm-4">Database:</dt>
+                    <dd class="col-sm-8">mySQL, postgeSQL, mongoDB, SQLite</dd>
 
                     <dt class="col-sm-4">Others:</dt>
-                    <dd class="col-sm-8">Git, Flask, command line</dd>
+                    <dd class="col-sm-8">Git, Flask, command line, Apache Spark, TensorFlow, StatsModels, Scikit-Learn</dd>
                 </dl>
             </div>
         </div>
