add new job experience

--- a/work.html
+++ b/work.html
@@ -60,6 +60,26 @@
         <div class="col-12 col-md-8 float-left pl-2">
             <div class="box">
                 <h1>Work Experience</h1>
+                <h3>Data Scientist / Quantitative Analyst <a href="https://www.costargroup.com/" target="_blank">CoStar Group</a></h3>
+                <p>Analyze and build forecasting models for Commercial Real Estate (CRE).
+                    <ul><strong>Work Description:</strong>
+                        <li>Conduct independent and creative quantitative research applied towards the evaluation and improvement of CRE models, data series and estimations</li>
+                        <li>Perform econometric-based forecasting and quantitative analysis</li>
+                        <li>Determine the need for changes to existing models and strategies</li>
+                        <li>Update model calibration and conduct model validation</li>
+                        <li>Document models and analytic products and tools for external and internal clients</li>
+                        <li>Implement data mining techniques to leverage databases for use in a variety of products and tools</li>
+                        <li>Perform quality assurance functions and error debugging throughout the models, data series and implementations</li>
+                    </ul>
+                </p>
+                <h3>Data Science Central Lecturer <a href="https://flatironschool.com/courses/data-science-bootcamp/" target="_blank">Flatiron School</a></h3>
+                <p>Teach and develop high quality Data Science curriculum for students from different background.
+                    <ul><strong>Work Description:</strong>
+                        <li>Contribute to various data science projects, including curriculum development, marketing, and admission activities</li>
+                        <li>Contribute to Flatiron School repository of instructional materials for both LIVE and FLEX programs</li>
+                        <li>Inform decisions about what resources and program improvement to prioritize to best enhance students’ experiences</li>
+                    </ul>
+                </p>
                 <h3>Data Scientist / Analyst @ <a href="http://www.codewithcorgis.com" target="_blank">Code with Corgis</a></h3>
                 <p>Experience in research design, data management, data mining, machine learning, statistical modeling, and BI dashboards.
                     <ul><strong>Work Description:</strong>
@@ -120,11 +140,13 @@
                 [ 'Work',   'First Global',                      new Date(2008, 3, 01), new Date(2009, 10, 30) ],
                 [ 'Work',   'EPIK',                              new Date(2010, 1, 20), new Date(2013, 1, 20) ],
                 [ 'Work',   'SFSU, DVC, USF, CCSF, MSU',         new Date(2015, 8, 25), new Date(2020, 12, 01) ],
-                [ 'Work',   'Code with Corgis',                  new Date(2019, 2, 01), new Date(2020, 12, 01) ],
+                [ 'Work',   'Code with Corgis',                  new Date(2019, 2, 01), new Date(2021, 6, 30) ],
+                [ 'Work',   'Flatiron School',                   new Date(2021, 7, 21), new Date(2022, 2, 3) ],
+                [ 'Work',   'CoStar Group',                      new Date(2022, 2, 7), new Date(2022, 5, 01) ],
                 [ 'Country',   'U.S.A.',                         new Date(2000, 8, 25), new Date(2005, 10, 01) ],
                 [ 'Country',   'Hong Kong',                      new Date(2005, 10, 03), new Date(2010, 1, 18) ],
                 [ 'Country',   'South Korea',                    new Date(2010, 1, 20), new Date(2013, 1, 20) ],
-                [ 'Country',   'U.S.A.',                         new Date(2013, 1, 22), new Date(2020, 12, 01) ]]);
+                [ 'Country',   'U.S.A.',                         new Date(2013, 1, 22), new Date(2022, 5, 01) ]]);
             var options = {
                 timeline: { colorByRowLabel: true }
             };
@@ -138,7 +160,7 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
     <footer class="footer py-4">
         <div class="container-xl px-5">
-            <span>Copyright &copy; 2019</span>
+            <span>Copyright &copy; 2022</span>
         </div>
     </footer>
 </body>
