--- a/index.html
+++ b/index.html
@@ -72,13 +72,11 @@
                 <p>Data scientist with several years of experience in academic research and data analytic. 
                     Experienced in data management and statistical packages, such as Javascript, Python, R, Stata, MatLab, E-View, SQL, and VBA. 
                     Received M.S. in Quantitative Economics in 2015, which concentrates in Health Economics, Industrial Organization, and Behaviorial Economics.
-                    Graduated from U.C. Berkeley Data Analytic boot camp in 2019 for keeping up with the recent technology and best practices. 
+                    Graduated from U.C. Berkeley Data Analytic boot camp in 2019 for keeping up with the recent technology and industry best practices. 
                     Certified Tableau Desktop Specialist in 2020.
                     Motivated to bring background in academic research and ability to build different statistical models with visualization to enhance decision-making and achieve company missions.
                 </p>
-
                 <p></p>
-                
                 <h2>Education</h2>
                 <h4>UC Berkeley Extension Program</h4>
                 <p>A 24-week intensive program focused on gaining technical programing skills in Excel, VBA, Python, R, JavaScript, SQL Databases, Tableau, Big Data, and Machine Learning, 2019.
@@ -125,18 +123,20 @@
                 dataTable.addColumn({ type: 'date', id: 'End' });
                 dataTable.addRows([
                 [ 'Education', 'B.A. in Economics',              new Date(2000, 8, 25),  new Date(2004, 5, 28) ],
-                [ 'Education', 'M.S. in Quantitative Economics', new Date(2013, 8, 25),  new Date(2015, 5, 28) ],
+                [ 'Education', 'M.A. in Economics',              new Date(2013, 8, 25),  new Date(2015, 5, 28) ],
                 [ 'Education', 'U.C. Berkeley Extension',        new Date(2019, 1, 21),  new Date(2019, 8, 23) ],
-                [ 'Work',   'Apex',                              new Date(2004, 10, 1), new Date(2005, 10, 01) ],
+                [ 'Work',   'Apex',                              new Date(2004, 10, 01), new Date(2005, 10, 01) ],
                 [ 'Work',   'Hallmark Cards',                    new Date(2006, 2, 10), new Date(2008, 2, 30) ],
-                [ 'Work',   'First Global',                      new Date(2008, 3, 1), new Date(2009, 10, 30) ],
+                [ 'Work',   'First Global',                      new Date(2008, 3, 01), new Date(2009, 10, 30) ],
                 [ 'Work',   'EPIK',                              new Date(2010, 1, 20), new Date(2013, 1, 20) ],
                 [ 'Work',   'SFSU, DVC, USF, CCSF, MSU',         new Date(2015, 8, 25), new Date(2020, 12, 01) ],
-                [ 'Work',   'Code with Corgis',                  new Date(2019, 2, 01), new Date(2020, 12, 01) ],
+                [ 'Work',   'Code with Corgis',                  new Date(2019, 2, 01), new Date(2021, 6, 30) ],
+                [ 'Work',   'Flatiron School',                   new Date(2021, 7, 21), new Date(2022, 2, 3) ],
+                [ 'Work',   'CoStar Group',                      new Date(2022, 2, 7), new Date(2022, 5, 01) ],
                 [ 'Country',   'U.S.A.',                         new Date(2000, 8, 25), new Date(2005, 10, 01) ],
-                [ 'Country',   'Hong Kong',                      new Date(2005, 10, 3), new Date(2010, 1, 18) ],
+                [ 'Country',   'Hong Kong',                      new Date(2005, 10, 03), new Date(2010, 1, 18) ],
                 [ 'Country',   'South Korea',                    new Date(2010, 1, 20), new Date(2013, 1, 20) ],
-                [ 'Country',   'U.S.A.',                         new Date(2013, 1, 22), new Date(2020, 12, 01) ]]);
+                [ 'Country',   'U.S.A.',                         new Date(2013, 1, 22), new Date(2022, 5, 01) ]]);
             var options = {
                 timeline: { colorByRowLabel: true }
             };
