add new decision science course to the list

--- a/teach.html
+++ b/teach.html
@@ -66,6 +66,7 @@
                     <li ><a href="http://bulletin.sfsu.edu/courses/econ/">ECON101: Principles of Microeconomics</a></li>
                     <li><a href="http://bulletin.sfsu.edu/courses/econ/">ECON102: Principles of Macroeconomics</a></li>
                     <li><a href="http://bulletin.sfsu.edu/courses/ds/ds.pdf">DS612: Data Mining with Business Applications</a></li>
+                    <li><a href="http://bulletin.sfsu.edu/courses/ds/ds.pdf">DS311: Technologies in Data Analytics</a></li>
                 </ul>
                 
                 <h2>University of San Francisco (USF)</h2>
