--- a/teach.html
+++ b/teach.html
@@ -61,7 +61,7 @@
             <div class="box">
                 <h1>Teaching History</h1>
                 <h2>San Francisco State University (SFSU)</h2>
-                <h4>Year: 2015 - Present</h4>
+                <h4>Year: 2015 - 2021</h4>
                 <ul><strong>Classes:</strong>
                     <li ><a href="http://bulletin.sfsu.edu/courses/econ/">ECON101: Principles of Microeconomics</a></li>
                     <li><a href="http://bulletin.sfsu.edu/courses/econ/">ECON102: Principles of Macroeconomics</a></li>
@@ -70,7 +70,7 @@
                 </ul>
                 
                 <h2>University of San Francisco (USF)</h2>
-                <h4>Year: 2016 - Present</h4>
+                <h4>Year: 2016 - 2021</h4>
                 <ul><strong>Classes:</strong>
                     <li ><a href="https://catalog.usfca.edu/preview_course_nopop.php?catoid=4&coid=14191">ECON111: Principles of Microeconomics</a></li>
                     <li><a href="https://www.usfca.edu/catalog/course/112-principles-of-macroeconomics">ECON112: Principles of Macroeconomics</a></li>
@@ -81,7 +81,7 @@
                 </ul>
                 
                 <h2>City College of San Francisco (CCSF)</h2>
-                <h4>Year: 2016 - Present</h4>
+                <h4>Year: 2016 - 2021</h4>
                 <ul><strong>Classes:</strong>
                     <li ><a href="http://www.ccsf.edu/en/educational-programs/ccsf-catalog/courses-by-department/econ-courses.html">ECON3: Principles of Microeconomics</a></li>
                     <li><a href="http://www.ccsf.edu/en/educational-programs/ccsf-catalog/courses-by-department/econ-courses.html">ECON1: Principles of Macroeconomics</a></li>
@@ -95,7 +95,7 @@
                 </ul>
 
                 <h2>Metropolitan State University (MSU)</h2>
-                <h4>Year: 2017 - Present</h4>
+                <h4>Year: 2017 - 2019</h4>
                 <ul><strong>Classes:</strong>
                     <li ><a href="https://www.metrostate.edu/academics/courses/econ-202">ECON202: Principles of Microeconomics</a></li>
                     <li><a href="https://www.metrostate.edu/academics/courses/econ-201">ECON201: Principles of Macroeconomics</a></li>
@@ -131,18 +131,19 @@
                 dataTable.addColumn({ type: 'date', id: 'End' });
                 dataTable.addRows([
                 [ 'Education', 'B.A. in Economics',              new Date(2000, 8, 25),  new Date(2004, 5, 28) ],
-                [ 'Education', 'M.S. in Quantitative Economics', new Date(2013, 8, 25),  new Date(2015, 5, 28) ],
+                [ 'Education', 'M.A. in Economics',              new Date(2013, 8, 25),  new Date(2015, 5, 28) ],
                 [ 'Education', 'U.C. Berkeley Extension',        new Date(2019, 1, 21),  new Date(2019, 8, 23) ],
-                [ 'Work',   'Apex',                              new Date(2004, 10, 1), new Date(2005, 10, 01) ],
                 [ 'Work',   'Hallmark Cards',                    new Date(2006, 2, 10), new Date(2008, 2, 30) ],
-                [ 'Work',   'First Global',                      new Date(2008, 3, 1), new Date(2009, 10, 30) ],
+                [ 'Work',   'First Global',                      new Date(2008, 3, 01), new Date(2009, 10, 30) ],
                 [ 'Work',   'EPIK',                              new Date(2010, 1, 20), new Date(2013, 1, 20) ],
                 [ 'Work',   'SFSU, DVC, USF, CCSF, MSU',         new Date(2015, 8, 25), new Date(2020, 12, 01) ],
-                [ 'Work',   'Code with Corgis',                  new Date(2019, 2, 01), new Date(2020, 12, 01) ],
+                [ 'Work',   'Code with Corgis',                  new Date(2019, 2, 01), new Date(2021, 6, 30) ],
+                [ 'Work',   'Flatiron School',                   new Date(2021, 7, 21), new Date(2022, 2, 3) ],
+                [ 'Work',   'CoStar Group',                      new Date(2022, 2, 7), new Date(2023, 2, 01) ],
                 [ 'Country',   'U.S.A.',                         new Date(2000, 8, 25), new Date(2005, 10, 01) ],
-                [ 'Country',   'Hong Kong',                      new Date(2005, 10, 3), new Date(2010, 1, 18) ],
+                [ 'Country',   'Hong Kong',                      new Date(2005, 10, 03), new Date(2010, 1, 18) ],
                 [ 'Country',   'South Korea',                    new Date(2010, 1, 20), new Date(2013, 1, 20) ],
-                [ 'Country',   'U.S.A.',                         new Date(2013, 1, 22), new Date(2020, 12, 01) ]]);
+                [ 'Country',   'U.S.A.',                         new Date(2013, 1, 22), new Date(2022, 5, 01) ]]);
             var options = {
                 timeline: { colorByRowLabel: true }
             };
