update resume file and download links

--- a/index.html
+++ b/index.html
@@ -64,17 +64,21 @@
                 San Francisco
             </h5>
             <h5>Visit Date: <script>document.write(new Date().toLocaleDateString());</script></h5>
-            <h5><a href="static/file/Norman_Resume_2019.pdf">Norman's Resume</a></h5>
+            <h5><a href="static/file/Norman_Resume_2023.pdf">Norman's Resume</a></h5>
         </div>
         <div class="col-12 col-md-8 float-left pl-2">
             <div class="box">
                 <h1>Norman's Profile</h1>
-                <p>Data scientist with several years of experience in academic research and data analytic. 
-                    Experienced in data management and statistical packages, such as Javascript, Python, R, Stata, MatLab, E-View, SQL, and VBA. 
-                    Received M.S. in Quantitative Economics in 2015, which concentrates in Health Economics, Industrial Organization, and Behaviorial Economics.
-                    Graduated from U.C. Berkeley Data Analytic boot camp in 2019 for keeping up with the recent technology and industry best practices. 
-                    Certified Tableau Desktop Specialist in 2020.
-                    Motivated to bring background in academic research and ability to build different statistical models with visualization to enhance decision-making and achieve company missions.
+                <p>I am a seasoned data scientist with extensive experience in academic research 
+                    and data analytics. My expertise lies in proficiently managing data and utilizing 
+                    statistical packages such as Javascript, Python, R, Stata, MatLab, E-View, SQL, and VBA. 
+                    In 2015, I earned an M.S. in Quantitative Economics with a specialization in Health Economics, 
+                    Industrial Organization, and Behavioral Economics. Additionally, I completed the U.C. Berkeley 
+                    Data Analytic boot camp in 2019, enabling me to stay abreast of the latest technologies and 
+                    industry best practices. In 2020, I achieved certification as a Tableau Desktop Specialist. 
+                    With a solid foundation in academic research, I am driven to leverage my abilities in constructing 
+                    diverse statistical models, accompanied by visualization techniques, to empower decision-making 
+                    processes and facilitate the achievement of company objectives.
                 </p>
                 <p></p>
                 <h2>Education</h2>
