update contact information

--- a/contact.html
+++ b/contact.html
@@ -68,7 +68,7 @@
                                 <i><svg class="lnr lnr-calendar-full"><use xlink:href="#lnr-calendar-full"></use></svg></i>
                             </a>
                         </dt>
-                        <dd class="col-sm-10">July 4th</dd>
+                        <dd class="col-sm-10">Last Update: 6/1/2023</dd>
                         <dt class="col-sm-2">
                             <a href="https://www.allareacodes.com/415" target="_blank">
                                 <i><svg class="lnr lnr-phone-handset"><use xlink:href="#lnr-phone-handset"></use></svg></i>
@@ -86,7 +86,7 @@
                                 <i><svg class="lnr lnr-home"><use xlink:href="#lnr-home"></use></svg></i>
                             </a>
                         </dt>
-                        <dd class="col-sm-10">San Francisco, CA 94107</dd>
+                        <dd class="col-sm-10">San Francisco, CA 94121</dd>
                     </ul>
                 </div>
                 <div class="box py-5">
