update contact information

--- a/contact.html
+++ b/contact.html
@@ -64,7 +64,7 @@
                     <h3 class="pd-2">General Information</h3>
                     <dl class="row">
                         <dt class="col-sm-2">
-                            <a href="https://www.onthisday.com/day/july/4" target="_blank">
+                            <a href="https://www.onthisday.com/day/june/1" target="_blank">
                                 <i><svg class="lnr lnr-calendar-full"><use xlink:href="#lnr-calendar-full"></use></svg></i>
                             </a>
                         </dt>
@@ -76,13 +76,13 @@
                         </dt>
                         <dd class="col-sm-10">(415) 386-2726</dd>
                         <dt class="col-sm-2">
-                            <a href="mailto: lokman@mail.sfsu.edu">
+                            <a href="mailto: lokmannorman@gmail.com">
                                 <i><svg class="lnr lnr-envelope"><use xlink:href="#lnr-envelope"></use></svg></i>
                             </a>
                         </dt>
                         <dd class="col-sm-10">lokmannorman@gmail.com</dd>
                         <dt class="col-sm-2">
-                            <a href="https://goo.gl/maps/RcWJuU5hsqLKtUSj7" target="_blank">
+                            <a href="https://goo.gl/maps/Ytkx8A479oekNxUYA" target="_blank">
                                 <i><svg class="lnr lnr-home"><use xlink:href="#lnr-home"></use></svg></i>
                             </a>
                         </dt>
